[package]
name = "ws2812-rp235x"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Kirby0717 <niconicoyusei@gmail.com>"]
description = "RP235xを使用してWS2812を光らせるライブラリ"
readme = "README.md"
repository = "https://github.com/Kirby0717/ws2812-rp235x"
categories = ["embedded"]

[dependencies]
cortex-m = "0.7"
rp235x-hal = "0.3"
smart-leds-trait = "0.3"
pio-proc = "0.2"
pio = "0.2"
nb = "1"

